# tid

./: README.md  pyproject.toml
docs/: DECISIONS.md
src/tid/: __init__.py  main.py  models.py  sql.py  timer.py
