[project]
name = "tid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "typer",
  "pydantic",
  "sqlmodel",
]

[project.scripts]
tid = "tid.main:app"

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"
